# CKAN-Monorepo

./: .cursorrules  .gitignore  .pre-commit-config.yaml  .secrets.baseline  DEMO_SCRIPT_FOR_COHORT_HEAD.md  FINAL_PROJECT_REPORT.md  PROJECT_SETUP_COMPLETE.md  README.md  SECURITY_COMPLETE_SETUP.md  TWITTER_THREAD.md  VIDEO_SCRIPT.md  ckan_dashboard_20250723_154802.html  demo_enhancements.py  interactive_ckan_dashboard.py  setup_phase3_testing.sh  simple_demo.py
CKAN-Modernization-20250721/ckan-monorepo/ckan/extensions/ckanext-analytics/: city_dataset_schema.yaml  pyproject.toml  test.ini  test_ai_suggestions.py  test_schema.py
CKAN-Modernization-20250721/ckan-monorepo/ckan/extensions/ckanext-analytics/ckanext/analytics/: cache.py  cli.py  helpers.py  models.py  plugin.py  validators.py  views.py
CKAN-Modernization-20250721/ckan-monorepo/ckan/extensions/ckanext-analytics/ckanext/analytics/assets/: script.js  webassets.yml
CKAN-Modernization-20250721/ckan-monorepo/ckan/extensions/ckanext-analytics/ckanext/analytics/logic/: action.py  auth.py  schema.py
CKAN-Modernization-20250721/ckan-monorepo/ckan/extensions/ckanext-analytics/ckanext/analytics/tests/: test_cache.py  test_helpers.py  test_performance.py  test_plugin.py
CKAN-Modernization-20250721/ckan-monorepo/extensions/ckanext-dataset-series/: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.ini
CKAN-Modernization-20250721/ckan-monorepo/extensions/ckanext-dataset-series/.github/workflows/: publish-pypi.yml  test.yml
CKAN-Modernization-20250721/ckan-monorepo/extensions/ckanext-dataset-series/ckanext/dataset_series/: actions.py  helpers.py  plugin.py  validators.py
CKAN-Modernization-20250721/ckan-monorepo/extensions/ckanext-dataset-series/ckanext/dataset_series/assets/: script.js  webassets.yml
CKAN-Modernization-20250721/ckan-monorepo/extensions/ckanext-dataset-series/ckanext/dataset_series/schemas/: dataset_in_series.yaml  dataset_series.yaml  dcat_ap_dataset_series.yaml  presets.yaml
CKAN-Modernization-20250721/ckan-monorepo/extensions/ckanext-dataset-series/ckanext/dataset_series/tests/: test_action.py  test_helpers.py  test_plugin.py  test_validators.py
CKAN-Modernization-20250721/ckan-monorepo/extensions/ckanext-search/: MANIFEST.in  README.md  pyproject.toml  setup.cfg  test-elasticsearch.ini  test-solr.ini  test.ini
CKAN-Modernization-20250721/ckan-monorepo/extensions/ckanext-search/.github/workflows/: test.yml
CKAN-Modernization-20250721/ckan-monorepo/extensions/ckanext-search/ckanext/search/: cli.py  filters.py  index.py  interfaces.py  plugin.py  schema.py  search_plugins.py
CKAN-Modernization-20250721/ckan-monorepo/extensions/ckanext-search/ckanext/search/assets/: script.js  webassets.yml
CKAN-Modernization-20250721/ckan-monorepo/extensions/ckanext-search/ckanext/search/logic/: actions.py  auth.py  schema.py
CKAN-Modernization-20250721/ckan-monorepo/extensions/ckanext-search/ckanext/search/providers/: es.py  solr.py
CKAN-Modernization-20250721/ckan-monorepo/extensions/ckanext-search/ckanext/search/tests/: conftest.py  factories.py  test_action.py  test_filters.py  test_plugin.py
CKAN-Modernization-20250721/ckan-monorepo/extensions/ckanext-search/ckanext/search/tests/elasticsearch/: test_es_provider.py
CKAN-Modernization-20250721/ckan-monorepo/extensions/ckanext-search/ckanext/search/tests/providers/: test_query.py  (+1 more)
CKAN-Modernization-20250721/ckan-monorepo/extensions/ckanext-search/doc/: filters.md
local/GRAVEYARD/additional-extensions/ckanext-datagovau/: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.rst  ba.json  babel.cfg  dev-requirements.txt  gulpfile.js  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  test.ini  worker-requirements.txt
local/GRAVEYARD/additional-extensions/ckanext-datagovau/ckanext/: __init__.py
local/GRAVEYARD/additional-extensions/ckanext-datagovau/ckanext/datagovau/: authenticator.py  config_declaration.yaml  geoserver_utils.py  helpers.py  plugin.py  profiles.py  types.py  validators.py
local/GRAVEYARD/additional-extensions/ckanext-datagovau/ckanext/datagovau/assets/: dga-setup.js  dga.css  webassets.yml
local/GRAVEYARD/additional-extensions/ckanext-datagovau/ckanext/datagovau/cli/: __init__.py  _bioregional.py  _energy_rating.py  geoserveringestor.py  googleanalytics.py  spatialingestor.py
local/GRAVEYARD/additional-extensions/ckanext-datagovau/ckanext/datagovau/logic/: action.py  auth.py  schema.py  transmutators.py  validators.py
local/GRAVEYARD/additional-extensions/ckanext-datagovau/ckanext/datagovau/schemas/: dataset.yaml  organization.yaml  presets.yaml
local/GRAVEYARD/additional-extensions/ckanext-datagovau/ckanext/datagovau/subplugins/: resource.py
local/GRAVEYARD/additional-extensions/ckanext-datagovau/ckanext/datagovau/templates/: base.html  footer.html  header.html  page.html
local/GRAVEYARD/additional-extensions/ckanext-datagovau/ckanext/datagovau/tests/: conftest.py  test_action.py  test_auth.py  test_authenicator.py  test_cli.py  test_ga.py  test_helpers.py
local/GRAVEYARD/additional-extensions/ckanext-datagovau/ckanext/datagovau/theme/: base  dataset.less  dataset.scss  dga.less  dga.scss  footer.scss  forms.less  homepage.less  homepage.scss  layout.less  layout.scss  legacy.less  legacy.scss  masthead.less  masthead.scss  media.less  media.scss  module.less  select2.less  select2.scss  toolbar.less  toolbar.scss  variables.less  variables.scss
local/GRAVEYARD/additional-extensions/ckanext-datagovau/ckanext/datagovau/utils/: __init__.py  zip.py
local/GRAVEYARD/additional-extensions/ckanext-datagovau/config/: licenses.json  project.ini  who.ini
local/GRAVEYARD/additional-extensions/ckanext-datagovau/config/solr/: schema_legacy.xml
local/GRAVEYARD/additional-extensions/ckanext-datagovau/config/transmute/: act.json  actmapi.json  aurin.json  connector_redland.json  csiro.json  dcceew.json  ditrdca.json  hobart.json  melbourne.json  nsw.json  qld.json  sa.json  southern_grampians.json  tasmania-list.json  tern.json  vic.json  wa.json
(+38524 files in other folders)
