[project]
name = "ckanext-search"
version = "0.0.1"
description = ""
readme = "README.md"
authors = [
    {name = ""}
]
license = {text = "AGPL"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

keywords = [ "CKAN", ]
dependencies = []

# TODO: move this to their own extensions
[project.optional-dependencies]
solr = ["pysolr"]
elasticsearch = ["elasticsearch<9"]


[project.urls]
Homepage = "https://github.com//ckanext-search"

[project.entry-points."ckan.plugins"]
search = "ckanext.search.plugin:SearchPlugin"

# Provider plugins
search_solr = "ckanext.search.providers.solr:SolrSearchProvider"
search_elasticsearch = "ckanext.search.providers.es:ElasticSearchProvider"

# Feature plugins
search_spatial = "ckanext.search.search_plugins:SpatialSearch"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
        "ignore::sqlalchemy.exc.SADeprecationWarning",
        "ignore::sqlalchemy.exc.SAWarning",
        "ignore::DeprecationWarning",
]
addopts = "--ckan-ini test.ini"
